[gd_scene load_steps=8 format=4 uid="uid://dsae24ufyx8er"]

[ext_resource type="PackedScene" uid="uid://be46f0movhp5e" path="res://prefabs/dual_map_layer.tscn" id="1_d8h6j"]
[ext_resource type="PackedScene" uid="uid://77dxilf67abv" path="res://prefabs/unit_container.tscn" id="1_ina8e"]
[ext_resource type="Script" path="res://scripts/debug_viewport.gd" id="1_piihe"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="3_akf2x"]
[ext_resource type="PackedScene" uid="uid://dt2ovg1fyjgyq" path="res://prefabs/pikmin_toggle.tscn" id="4_3d2ly"]
[ext_resource type="PackedScene" uid="uid://dt4m8c03s0j5c" path="res://prefabs/sun_meter.tscn" id="5_pcs8q"]
[ext_resource type="PackedScene" uid="uid://cwvhqo7s352tp" path="res://prefabs/survey_label.tscn" id="7_0ps20"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="GameView" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 320.0
script = ExtResource("1_piihe")

[node name="SubViewport" type="SubViewport" parent="GameView"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(640, 320)
render_target_update_mode = 4

[node name="UnitContainer" parent="GameView/SubViewport" instance=ExtResource("1_ina8e")]
unique_name_in_owner = true

[node name="HUD" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_akf2x")

[node name="StaticLayer" parent="HUD" instance=ExtResource("1_d8h6j")]
tile_map_data = PackedByteArray("AABFACoAAAAMAAAAAABFACwAAgAAAAAAAABGACoAAAAMAAAAAABGACwAAgAAAAAAAABHACoAAAAMAAAAAABHACwAAgAAAAAAAABIACoAAAAMAAAAAABIACwAAgAAAAAAAABJACoAAAAMAAAAAABJACwAAgAAAAAAAABKACoAAAAMAAAAAABKACwAAgAAAAAAAABLACoAAAAMAAAAAABLACwAAgAAAAAAAABMACoAAAAMAAAAAABMACwAAgAAAAAAAABNACoAAAAMAAAAAABNACwAAgAAAAAAAABOACoAAgAAAAAAAABOACwAAgAAAAAAAABPACoAAgAAAAAAAABPACwAAgAAAAAAAAA/AAMAAAAMAAMAAAADAAMAAAAMAAMAAAAEAAMAAAAMAAAAAAAFAAMAAAAMAAAAAAAGAAMAAAAMAAAAAAAHAAMAAAAMAAAAAAAIAAMAAAATAAcAAAAJAAMAAAAMAAAAAAAKAAMAAAAMAAAAAAALAAMAAAAMAAAAAAAMAAMAAAAMAAAAAAANAAMAAAATAAcAAAAOAAMAAAAMAAAAAAAPAAMAAAAMAAAAAAAQAAMAAAAMAAAAAAARAAMAAAAMAAAAAAASAAMAAAATAAcAAAATAAMAAAAMAAAAAAAUAAMAAAAMAAAAAAAVAAMAAAAMAAAAAAAWAAMAAAAMAAAAAAAXAAMAAAATAAcAAAAYAAMAAAAMAAAAAAAZAAMAAAAMAAAAAAAaAAMAAAAMAAAAAAAbAAMAAAAMAAAAAAAcAAMAAAATAAcAAAAdAAMAAAAMAAAAAAAeAAMAAAAMAAAAAAAfAAMAAAAMAAAAAAAgAAMAAAAMAAAAAAAhAAMAAAAMAAMAAAAiAAMAAAAMAAAAAAAjAAMAAAAMAAAAAAAkAAMAAAAMAAAAAAAlAAMAAAAMAAAAAAAmAAMAAAATAAcAAAAnAAMAAAAMAAAAAAAoAAMAAAAMAAAAAAApAAMAAAAMAAAAAAAqAAMAAAAMAAAAAAArAAMAAAATAAcAAAAsAAMAAAAMAAAAAAAtAAMAAAAMAAAAAAAuAAMAAAAMAAAAAAAvAAMAAAAMAAAAAAAwAAMAAAATAAcAAAAxAAMAAAAMAAAAAAAyAAMAAAAMAAAAAAAzAAMAAAAMAAAAAAA0AAMAAAAMAAAAAAA1AAMAAAATAAcAAAA2AAMAAAAMAAAAAAA3AAMAAAAMAAAAAAA4AAMAAAAMAAAAAAA5AAMAAAAMAAAAAAA6AAMAAAATAAcAAAA7AAMAAAAMAAAAAAA8AAMAAAAMAAAAAAA9AAMAAAAMAAAAAAA+AAMAAAAMAAAAAABFACsAAAADAAAAAQBFACkAAAADAAAAAQA=")

[node name="BackgroundLayer" parent="HUD/StaticLayer" index="0"]
tile_map_data = PackedByteArray("AABFACoAAgAAAAAAAABGACoAAgAAAAAAAABHACoAAgAAAAAAAABIACoAAgAAAAAAAABJACoAAgAAAAAAAABKACoAAgAAAAAAAABLACoAAgAAAAAAAABMACoAAgAAAAAAAABNACoAAgAAAAAAAAAAACgAAgAAAAAAAAAAACkAAgAAAAAAAAAAACoAAgAAAAAAAAAAACsAAgAAAAAAAAAAACwAAgAAAAAAAAABACgAAgAAAAAAAAABACkAAgAAAAAAAAABACoAAgAAAAAAAAABACsAAgAAAAAAAAABACwAAgAAAAAAAAACACgAAgAAAAAAAAACACkAAgAAAAAAAAACACoAAgAAAAAAAAACACsAAgAAAAAAAAACACwAAgAAAAAAAAADACgAAgAAAAAAAAADACkAAgAAAAAAAAADACoAAgAAAAAAAAADACsAAgAAAAAAAAADACwAAgAAAAAAAAAEACgAAgAAAAAAAAAEACkAAgAAAAAAAAAEACoAAgAAAAAAAAAEACsAAgAAAAAAAAAEACwAAgAAAAAAAAAFACgAAgAAAAAAAAAFACkAAgAAAAAAAAAFACoAAgAAAAAAAAAFACsAAgAAAAAAAAAFACwAAgAAAAAAAAAGACgAAgAAAAAAAAAGACkAAgAAAAAAAAAGACoAAgAAAAAAAAAGACsAAgAAAAAAAAAGACwAAgAAAAAAAAAHACgAAgAAAAAAAAAHACkAAgAAAAAAAAAHACoAAgAAAAAAAAAHACsAAgAAAAAAAAAHACwAAgAAAAAAAAAIACgAAgAAAAAAAAAIACkAAgAAAAAAAAAIACoAAgAAAAAAAAAIACsAAgAAAAAAAAAIACwAAgAAAAAAAAAJACgAAgAAAAAAAAAJACkAAgAAAAAAAAAJACoAAgAAAAAAAAAJACsAAgAAAAAAAAAJACwAAgAAAAAAAAAKACgAAgAAAAAAAAAKACkAAgAAAAAAAAAKACoAAgAAAAAAAAAKACsAAgAAAAAAAAAKACwAAgAAAAAAAAALACgAAgAAAAAAAAALACkAAgAAAAAAAAALACoAAgAAAAAAAAALACsAAgAAAAAAAAALACwAAgAAAAAAAAAMACgAAgAAAAAAAAAMACkAAgAAAAAAAAAMACoAAgAAAAAAAAAMACsAAgAAAAAAAAAMACwAAgAAAAAAAAANACgAAgAAAAAAAAANACkAAgAAAAAAAAANACoAAgAAAAAAAAANACsAAgAAAAAAAAANACwAAgAAAAAAAAAOACgAAgAAAAAAAAAOACkAAgAAAAAAAAAOACoAAgAAAAAAAAAOACsAAgAAAAAAAAAOACwAAgAAAAAAAAAPACgAAgAAAAAAAAAPACkAAgAAAAAAAAAPACoAAgAAAAAAAAAPACsAAgAAAAAAAAAPACwAAgAAAAAAAAAQACgAAgAAAAAAAAAQACkAAgAAAAAAAAAQACoAAgAAAAAAAAAQACsAAgAAAAAAAAAQACwAAgAAAAAAAAARACgAAgAAAAAAAAARACkAAgAAAAAAAAARACoAAgAAAAAAAAARACsAAgAAAAAAAAARACwAAgAAAAAAAAASACgAAgAAAAAAAAASACkAAgAAAAAAAAASACoAAgAAAAAAAAASACsAAgAAAAAAAAASACwAAgAAAAAAAAATACgAAgAAAAAAAAATACkAAgAAAAAAAAATACoAAgAAAAAAAAATACsAAgAAAAAAAAATACwAAgAAAAAAAAAUACgAAgAAAAAAAAAUACkAAgAAAAAAAAAUACoAAgAAAAAAAAAUACsAAgAAAAAAAAAUACwAAgAAAAAAAAAVACgAAgAAAAAAAAAVACkAAgAAAAAAAAAVACoAAgAAAAAAAAAVACsAAgAAAAAAAAAVACwAAgAAAAAAAAAWACgAAgAAAAAAAAAWACkAAgAAAAAAAAAWACoAAgAAAAAAAAAWACsAAgAAAAAAAAAWACwAAgAAAAAAAAAXACgAAgAAAAAAAAAXACkAAgAAAAAAAAAXACoAAgAAAAAAAAAXACsAAgAAAAAAAAAXACwAAgAAAAAAAAAYACgAAgAAAAAAAAAYACkAAgAAAAAAAAAYACoAAgAAAAAAAAAYACsAAgAAAAAAAAAYACwAAgAAAAAAAAAZACgAAgAAAAAAAAAZACkAAgAAAAAAAAAZACoAAgAAAAAAAAAZACsAAgAAAAAAAAAZACwAAgAAAAAAAAAaACgAAgAAAAAAAAAaACkAAgAAAAAAAAAaACoAAgAAAAAAAAAaACsAAgAAAAAAAAAaACwAAgAAAAAAAAAbACgAAgAAAAAAAAAbACkAAgAAAAAAAAAbACoAAgAAAAAAAAAbACsAAgAAAAAAAAAbACwAAgAAAAAAAAAcACgAAgAAAAAAAAAcACkAAgAAAAAAAAAcACoAAgAAAAAAAAAcACsAAgAAAAAAAAAcACwAAgAAAAAAAAAdACgAAgAAAAAAAAAdACkAAgAAAAAAAAAdACoAAgAAAAAAAAAdACsAAgAAAAAAAAAdACwAAgAAAAAAAAAeACgAAgAAAAAAAAAeACkAAgAAAAAAAAAeACoAAgAAAAAAAAAeACsAAgAAAAAAAAAeACwAAgAAAAAAAAAfACgAAgAAAAAAAAAfACkAAgAAAAAAAAAfACoAAgAAAAAAAAAfACsAAgAAAAAAAAAfACwAAgAAAAAAAAAgACgAAgAAAAAAAAAgACkAAgAAAAAAAAAgACoAAgAAAAAAAAAgACsAAgAAAAAAAAAgACwAAgAAAAAAAAAhACgAAgAAAAAAAAAhACkAAgAAAAAAAAAhACoAAgAAAAAAAAAhACsAAgAAAAAAAAAhACwAAgAAAAAAAAAiACgAAgAAAAAAAAAiACkAAgAAAAAAAAAiACoAAgAAAAAAAAAiACsAAgAAAAAAAAAiACwAAgAAAAAAAAAjACgAAgAAAAAAAAAjACkAAgAAAAAAAAAjACoAAgAAAAAAAAAjACsAAgAAAAAAAAAjACwAAgAAAAAAAAAkACgAAgAAAAAAAAAkACkAAgAAAAAAAAAkACoAAgAAAAAAAAAkACsAAgAAAAAAAAAkACwAAgAAAAAAAAAlACgAAgAAAAAAAAAlACkAAgAAAAAAAAAlACoAAgAAAAAAAAAlACsAAgAAAAAAAAAlACwAAgAAAAAAAAAmACgAAgAAAAAAAAAmACkAAgAAAAAAAAAmACoAAgAAAAAAAAAmACsAAgAAAAAAAAAmACwAAgAAAAAAAAAnACgAAgAAAAAAAAAnACkAAgAAAAAAAAAnACoAAgAAAAAAAAAnACsAAgAAAAAAAAAnACwAAgAAAAAAAAAoACgAAgAAAAAAAAAoACkAAgAAAAAAAAAoACoAAgAAAAAAAAAoACsAAgAAAAAAAAAoACwAAgAAAAAAAAApACgAAgAAAAAAAAApACkAAgAAAAAAAAApACoAAgAAAAAAAAApACsAAgAAAAAAAAApACwAAgAAAAAAAAAqACgAAgAAAAAAAAAqACkAAgAAAAAAAAAqACoAAgAAAAAAAAAqACsAAgAAAAAAAAAqACwAAgAAAAAAAAArACgAAgAAAAAAAAArACkAAgAAAAAAAAArACoAAgAAAAAAAAArACsAAgAAAAAAAAArACwAAgAAAAAAAAAsACgAAgAAAAAAAAAsACkAAgAAAAAAAAAsACoAAgAAAAAAAAAsACsAAgAAAAAAAAAsACwAAgAAAAAAAAAtACgAAgAAAAAAAAAtACkAAgAAAAAAAAAtACoAAgAAAAAAAAAtACsAAgAAAAAAAAAtACwAAgAAAAAAAAAuACgAAgAAAAAAAAAuACkAAgAAAAAAAAAuACoAAgAAAAAAAAAuACsAAgAAAAAAAAAuACwAAgAAAAAAAAAvACgAAgAAAAAAAAAvACkAAgAAAAAAAAAvACoAAgAAAAAAAAAvACsAAgAAAAAAAAAvACwAAgAAAAAAAAAwACgAAgAAAAAAAAAwACkAAgAAAAAAAAAwACoAAgAAAAAAAAAwACsAAgAAAAAAAAAwACwAAgAAAAAAAAAxACgAAgAAAAAAAAAxACkAAgAAAAAAAAAxACoAAgAAAAAAAAAxACsAAgAAAAAAAAAxACwAAgAAAAAAAAAyACgAAgAAAAAAAAAyACkAAgAAAAAAAAAyACoAAgAAAAAAAAAyACsAAgAAAAAAAAAyACwAAgAAAAAAAAAzACgAAgAAAAAAAAAzACkAAgAAAAAAAAAzACoAAgAAAAAAAAAzACsAAgAAAAAAAAAzACwAAgAAAAAAAAA0ACgAAgAAAAAAAAA0ACkAAgAAAAAAAAA0ACoAAgAAAAAAAAA0ACsAAgAAAAAAAAA0ACwAAgAAAAAAAAA1ACgAAgAAAAAAAAA1ACkAAgAAAAAAAAA1ACoAAgAAAAAAAAA1ACsAAgAAAAAAAAA1ACwAAgAAAAAAAAA2ACgAAgAAAAAAAAA2ACkAAgAAAAAAAAA2ACoAAgAAAAAAAAA2ACsAAgAAAAAAAAA2ACwAAgAAAAAAAAA3ACgAAgAAAAAAAAA3ACkAAgAAAAAAAAA3ACoAAgAAAAAAAAA3ACsAAgAAAAAAAAA3ACwAAgAAAAAAAAA4ACgAAgAAAAAAAAA4ACkAAgAAAAAAAAA4ACoAAgAAAAAAAAA4ACsAAgAAAAAAAAA4ACwAAgAAAAAAAAA5ACgAAgAAAAAAAAA5ACkAAgAAAAAAAAA5ACoAAgAAAAAAAAA5ACsAAgAAAAAAAAA5ACwAAgAAAAAAAAA6ACgAAgAAAAAAAAA6ACkAAgAAAAAAAAA6ACoAAgAAAAAAAAA6ACsAAgAAAAAAAAA6ACwAAgAAAAAAAAA7ACgAAgAAAAAAAAA7ACkAAgAAAAAAAAA7ACoAAgAAAAAAAAA7ACsAAgAAAAAAAAA7ACwAAgAAAAAAAAA8ACgAAgAAAAAAAAA8ACkAAgAAAAAAAAA8ACoAAgAAAAAAAAA8ACsAAgAAAAAAAAA8ACwAAgAAAAAAAAA9ACgAAgAAAAAAAAA9ACkAAgAAAAAAAAA9ACoAAgAAAAAAAAA9ACsAAgAAAAAAAAA9ACwAAgAAAAAAAAA+ACgAAgAAAAAAAAA+ACkAAgAAAAAAAAA+ACoAAgAAAAAAAAA+ACsAAgAAAAAAAAA+ACwAAgAAAAAAAAA/ACgAAgAAAAAAAAA/ACkAAgAAAAAAAAA/ACoAAgAAAAAAAAA/ACsAAgAAAAAAAAA/ACwAAgAAAAAAAABAACgAAgAAAAAAAABAACkAAgAAAAAAAABAACoAAgAAAAAAAABAACsAAgAAAAAAAABAACwAAgAAAAAAAABBACgAAgAAAAAAAABBACkAAgAAAAAAAABBACoAAgAAAAAAAABBACsAAgAAAAAAAABBACwAAgAAAAAAAABCACgAAgAAAAAAAABCACkAAgAAAAAAAABCACoAAgAAAAAAAABCACsAAgAAAAAAAABCACwAAgAAAAAAAABDACgAAgAAAAAAAABDACkAAgAAAAAAAABDACoAAgAAAAAAAABDACsAAgAAAAAAAABDACwAAgAAAAAAAABEACgAAgAAAAAAAABEACkAAgAAAAAAAABEACoAAgAAAAAAAABEACsAAgAAAAAAAABEACwAAgAAAAAAAABFACgAAgAAAAAAAABFACkAAgAAAAAAAABFACsAAgAAAAAAAABFACwAAgAAAAAAAABGACgAAgAAAAAAAABGACkAAgAAAAAAAABGACsAAgAAAAAAAABGACwAAgAAAAAAAABHACgAAgAAAAAAAABHACkAAgAAAAAAAABHACsAAgAAAAAAAABHACwAAgAAAAAAAABIACgAAgAAAAAAAABIACkAAgAAAAAAAABIACsAAgAAAAAAAABIACwAAgAAAAAAAABJACgAAgAAAAAAAABJACkAAgAAAAAAAABJACsAAgAAAAAAAABJACwAAgAAAAAAAABKACgAAgAAAAAAAABKACkAAgAAAAAAAABKACsAAgAAAAAAAABKACwAAgAAAAAAAABLACgAAgAAAAAAAABLACkAAgAAAAAAAABLACsAAgAAAAAAAABLACwAAgAAAAAAAABMACgAAgAAAAAAAABMACkAAgAAAAAAAABMACsAAgAAAAAAAABMACwAAgAAAAAAAABNACgAAgAAAAAAAABNACkAAgAAAAAAAABNACsAAgAAAAAAAABNACwAAgAAAAAAAABOACgAAgAAAAAAAABOACkAAgAAAAAAAABOACoAAgAAAAAAAABOACsAAgAAAAAAAABOACwAAgAAAAAAAABPACgAAgAAAAAAAABPACkAAgAAAAAAAABPACoAAgAAAAAAAABPACsAAgAAAAAAAABPACwAAgAAAAAAAABEACYAAgAAAAAAAABEACcAAgAAAAAAAABFACYAAgAAAAAAAABFACcAAgAAAAAAAABGACYAAgAAAAAAAABGACcAAgAAAAAAAABHACYAAgAAAAAAAABHACcAAgAAAAAAAABIACYAAgAAAAAAAABIACcAAgAAAAAAAABJACYAAgAAAAAAAABJACcAAgAAAAAAAABKACYAAgAAAAAAAABKACcAAgAAAAAAAABLACYAAgAAAAAAAABLACcAAgAAAAAAAABMACYAAgAAAAAAAABMACcAAgAAAAAAAABNACYAAgAAAAAAAABNACcAAgAAAAAAAABOACYAAgAAAAAAAABOACcAAgAAAAAAAABPACYAAgAAAAAAAABPACcAAgAAAAAAAABCAAEAAgAAAAAAAABCAAIAAgAAAAAAAABCAAMAAgAAAAAAAABCAAQAAgAAAAAAAABCAAUAAgAAAAAAAABDAAEAAgAAAAAAAABDAAIAAgAAAAAAAABDAAMAAgAAAAAAAABDAAQAAgAAAAAAAABDAAUAAgAAAAAAAABEAAEAAgAAAAAAAABEAAIAAgAAAAAAAABEAAMAAgAAAAAAAABEAAQAAgAAAAAAAABEAAUAAgAAAAAAAABFAAEAAgAAAAAAAABFAAIAAgAAAAAAAABFAAMAAgAAAAAAAABFAAQAAgAAAAAAAABFAAUAAgAAAAAAAABGAAEAAgAAAAAAAABGAAIAAgAAAAAAAABGAAMAAgAAAAAAAABGAAQAAgAAAAAAAABGAAUAAgAAAAAAAABHAAEAAgAAAAAAAABHAAIAAgAAAAAAAABHAAMAAgAAAAAAAABHAAQAAgAAAAAAAABHAAUAAgAAAAAAAABIAAEAAgAAAAAAAABIAAIAAgAAAAAAAABIAAMAAgAAAAAAAABIAAQAAgAAAAAAAABIAAUAAgAAAAAAAABJAAEAAgAAAAAAAABJAAIAAgAAAAAAAABJAAMAAgAAAAAAAABJAAQAAgAAAAAAAABJAAUAAgAAAAAAAABKAAEAAgAAAAAAAABKAAIAAgAAAAAAAABKAAMAAgAAAAAAAABKAAQAAgAAAAAAAABKAAUAAgAAAAAAAABLAAEAAgAAAAAAAABLAAIAAgAAAAAAAABLAAMAAgAAAAAAAABLAAQAAgAAAAAAAABLAAUAAgAAAAAAAABMAAEAAgAAAAAAAABMAAIAAgAAAAAAAABMAAMAAgAAAAAAAABMAAQAAgAAAAAAAABMAAUAAgAAAAAAAABNAAEAAgAAAAAAAABNAAIAAgAAAAAAAABNAAMAAgAAAAAAAABNAAQAAgAAAAAAAABNAAUAAgAAAAAAAAADAAMAAgAAAAAAAAAEAAMAAgAAAAAAAAAFAAMAAgAAAAAAAAAGAAMAAgAAAAAAAAAHAAMAAgAAAAAAAAAIAAMAAgAAAAAAAAAJAAMAAgAAAAAAAAAKAAMAAgAAAAAAAAALAAMAAgAAAAAAAAAMAAMAAgAAAAAAAAANAAMAAgAAAAAAAAAOAAMAAgAAAAAAAAAPAAMAAgAAAAAAAAAQAAMAAgAAAAAAAAARAAMAAgAAAAAAAAASAAMAAgAAAAAAAAATAAMAAgAAAAAAAAAUAAMAAgAAAAAAAAAVAAMAAgAAAAAAAAAWAAMAAgAAAAAAAAAXAAMAAgAAAAAAAAAYAAMAAgAAAAAAAAAZAAMAAgAAAAAAAAAaAAMAAgAAAAAAAAAbAAMAAgAAAAAAAAAcAAMAAgAAAAAAAAAdAAMAAgAAAAAAAAAeAAMAAgAAAAAAAAAfAAMAAgAAAAAAAAAgAAMAAgAAAAAAAAAhAAMAAgAAAAAAAAAiAAMAAgAAAAAAAAAjAAMAAgAAAAAAAAAkAAMAAgAAAAAAAAAlAAMAAgAAAAAAAAAmAAMAAgAAAAAAAAAnAAMAAgAAAAAAAAAoAAMAAgAAAAAAAAApAAMAAgAAAAAAAAAqAAMAAgAAAAAAAAArAAMAAgAAAAAAAAAsAAMAAgAAAAAAAAAtAAMAAgAAAAAAAAAuAAMAAgAAAAAAAAAvAAMAAgAAAAAAAAAwAAMAAgAAAAAAAAAxAAMAAgAAAAAAAAAyAAMAAgAAAAAAAAAzAAMAAgAAAAAAAAA0AAMAAgAAAAAAAAA1AAMAAgAAAAAAAAA2AAMAAgAAAAAAAAA3AAMAAgAAAAAAAAA4AAMAAgAAAAAAAAA5AAMAAgAAAAAAAAA6AAMAAgAAAAAAAAA7AAMAAgAAAAAAAAA8AAMAAgAAAAAAAAA9AAMAAgAAAAAAAAA+AAMAAgAAAAAAAAA/AAMAAgAAAAAAAAA=")

[node name="SunMeter" parent="HUD" instance=ExtResource("5_pcs8q")]

[node name="PlayerName" type="Label" parent="HUD"]
offset_left = 16.0
offset_top = 328.0
offset_right = 88.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 8
text = "Atimar"
horizontal_alignment = 2

[node name="PlayerHealth" type="Label" parent="HUD"]
offset_left = 56.0
offset_top = 344.0
offset_right = 88.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 8
text = "100%"
horizontal_alignment = 2

[node name="SelectedUnit" type="Label" parent="HUD"]
self_modulate = Color(0.662745, 0.662745, 0.662745, 1)
custom_minimum_size = Vector2(96, 8)
offset_left = 104.0
offset_top = 336.0
offset_right = 176.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 8
text = "None (0)"
horizontal_alignment = 2

[node name="SquadCount" type="Label" parent="HUD"]
custom_minimum_size = Vector2(80, 8)
offset_left = 224.0
offset_top = 328.0
offset_right = 304.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 8
text = "Squad: 0"

[node name="FieldCount" type="Label" parent="HUD"]
custom_minimum_size = Vector2(80, 8)
offset_left = 224.0
offset_top = 336.0
offset_right = 304.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 8
text = "Field: 0"

[node name="TotalCount" type="Label" parent="HUD"]
custom_minimum_size = Vector2(96, 8)
offset_left = 224.0
offset_top = 344.0
offset_right = 320.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 8
text = "Total: 99999
"

[node name="InfoBox" type="RichTextLabel" parent="HUD"]
offset_left = 344.0
offset_top = 328.0
offset_right = 528.0
offset_bottom = 352.0
theme_override_constants/line_separation = 1
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="MoneyValue" type="Label" parent="HUD"]
custom_minimum_size = Vector2(64, 8)
offset_left = 560.0
offset_top = 328.0
offset_right = 624.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 2

[node name="QuotaValue" type="Label" parent="HUD"]
custom_minimum_size = Vector2(64, 8)
offset_left = 560.0
offset_top = 344.0
offset_right = 624.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 8
text = "300"
horizontal_alignment = 2

[node name="QuotaLimit" type="Label" parent="HUD"]
offset_left = 560.0
offset_top = 312.0
offset_right = 624.0
offset_bottom = 320.0
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 8
text = "(3 Days)"
autowrap_mode = 3

[node name="DayLabel" type="Label" parent="HUD"]
offset_left = 536.0
offset_top = 16.0
offset_right = 560.0
offset_bottom = 24.0
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 8
text = "Day
"
autowrap_mode = 3

[node name="DayCount" type="Label" parent="HUD"]
offset_left = 536.0
offset_top = 32.0
offset_right = 560.0
offset_bottom = 40.0
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
autowrap_mode = 3

[node name="QuotaLabel" type="Label" parent="HUD"]
offset_left = 576.0
offset_top = 16.0
offset_right = 616.0
offset_bottom = 24.0
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 8
text = "Quota
"
autowrap_mode = 3

[node name="QuotaCount" type="Label" parent="HUD"]
offset_left = 584.0
offset_top = 32.0
offset_right = 608.0
offset_bottom = 40.0
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
autowrap_mode = 3

[node name="UnitToggle" parent="HUD" instance=ExtResource("4_3d2ly")]
visible = false

[node name="SurveyLabel" parent="HUD" instance=ExtResource("7_0ps20")]
visible = false

[node name="DebugTime" type="Label" parent="HUD"]
offset_left = 1.0
offset_right = 41.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 8

[editable path="HUD/StaticLayer"]
